# FixedSizeLinalg

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: FSLinalg.pc.in  FSLinalgConfig.cmake.in
demo/: CMakeLists.txt  demo_Matrix.cpp  demo_Tensor.cpp  demo_Vector.cpp
include/FSLinalg/: CRTPBase.hpp  Matrix.hpp  NumTraits.hpp  Scalar.hpp  Tensor.hpp  Vector.hpp
include/FSLinalg/BasicLinalg/: GeneralMatrixMatrixProduct.hpp  GeneralMatrixMatrixProduct_impl.hpp  GeneralMatrixVectorProduct.hpp  InnerProduct.hpp  InnerProduct_impl.hpp  Norm.hpp  Norm_impl.hpp  Product.hpp  Product_impl.hpp  TripleProduct.hpp  TripleProduct_impl.hpp
include/FSLinalg/Matrix/: Formater.hpp  KeepBrackets.hpp  Matrix.hpp  MatrixBase.hpp  MatrixBase_impl.hpp  MatrixConj.hpp  MatrixConj_impl.hpp  MatrixMinus.hpp  MatrixProduct.hpp  MatrixProductAnalyzer.hpp  MatrixProductAnalyzer_impl.hpp  MatrixProductChain.hpp  MatrixProductChain_impl.hpp  MatrixProduct_impl.hpp  MatrixScale.hpp  MatrixSub.hpp  MatrixSum.hpp  MatrixTransposed.hpp  MatrixTransposed_impl.hpp  Matrix_impl.hpp  StripSymbolsAndEvalMatrix.hpp  StripSymbolsVectorFromOuterProduct.hpp  UnitMatrix.hpp  VectorCross.hpp  VectorCross_impl.hpp  VectorOuterProduct.hpp  VectorOuterProduct_impl.hpp
include/FSLinalg/Tensor/: Formater.hpp  Tensor.hpp  TensorBase.hpp  TensorBase_impl.hpp  TensorBinaryOp.hpp  TensorBinaryOp_impl.hpp  TensorUtils.hpp  TensorUtils_impl.hpp  Tensor_impl.hpp
include/FSLinalg/Vector/: Formater.hpp  MatrixVectorProduct.hpp  MatrixVectorProduct_impl.hpp  StripSymbolsAndEvalVector.hpp  UnitVector.hpp  Vector.hpp  VectorBase.hpp  VectorBase_impl.hpp  VectorConj.hpp  VectorConj_impl.hpp  VectorCross.hpp  VectorCross_impl.hpp  VectorMinus.hpp  VectorScale.hpp  VectorSub.hpp  VectorSum.hpp
include/FSLinalg/misc/: BinaryOp.hpp  Logical.hpp  NestedInitializerList.hpp  NestedLoop.hpp  NestedLoop_impl.hpp  StaticFor.hpp
tests/: CMakeLists.txt  test_aliasing.cpp  test_chain.cpp  test_lazy.cpp  test_tensor.cpp  tests_fslinalg.cpp
